--- a/package.json
+++ b/package.json
@@ -3,8 +3,14 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
+    "start": "ng serve --configuration dev",
+    "start-dev": "ng serve --configuration dev",
+    "start-qa": "ng serve --configuration qa",
+    "start-prod": "ng serve --configuration prod",
+    "build": "ng build --configuration dev --prod=false",
+    "build-dev": "ng build --configuration dev --prod=false",
+    "build-qa": "ng build --configuration qa --prod=true",
+    "build-prod": "ng build --configuration prod --prod=true",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
@@ -20,6 +26,8 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "keycloak-angular": "^7.1.0",
+    "keycloak-js": "^8.0.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
