--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,15 @@
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    "paths": {
+      "app": ["src/app"],
+      "app/*": ["src/app/*"],
+      "shared": ["src/app/shared"],
+      "shared/*": ["src/app/shared/*"],
+      "environments": ["src/environments"],
+      "environments/*": ["src/environments/*"]
+    }
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
