Load logged in User
- Removes angular default components content
- Initializes Keycloak on app initialization
- Redirects to login screen, in case of a not authenticated user
- Requests the logged in user from the BE, including the users roles
- Adds some app initialization tests

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@angular/router": "~8.2.14",
     "keycloak-angular": "^7.1.0",
     "keycloak-js": "^8.0.1",
+    "lodash": "^4.17.15",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
