Role based start pages
- Configured Keycloak
- Load logged in user and roles properly via rest API
- Adds a role based landing page rediction service
- Adds a basic admin landing page
- Adds lazy loaded modules and a shared module
- Adds a lot of tests (Coverage ~ 80%)
- Updates tslinter rules

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build-qa": "ng build --configuration qa --prod=true",
     "build-prod": "ng build --configuration prod --prod=true",
     "test": "ng test",
+    "test-headless": "ng test --watch=false --browsers=ChromeHeadless",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "sonar": "sonar-scanner"
