Create user form
- Adds input generic text input field, with label and field info text
- Uses this input field for create users email, first and family name
inputs

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "lodash": "^4.17.15",
     "node-sass": "^4.13.1",
     "rxjs": "~6.4.0",
+    "shortid": "^2.2.15",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
