--- a/package.json
+++ b/package.json
@@ -27,8 +27,12 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "@fortawesome/angular-fontawesome": "^0.5.0",
+    "@fortawesome/fontawesome-svg-core": "1.2.21",
+    "@fortawesome/free-brands-svg-icons": "5.10.1",
+    "@fortawesome/free-regular-svg-icons": "5.10.1",
+    "@fortawesome/free-solid-svg-icons": "5.10.1",
     "bootstrap": "^4.4.1",
-    "font-awesome": "^4.7.0",
     "keycloak-angular": "^7.1.0",
     "keycloak-js": "^8.0.1",
     "lodash": "^4.17.15",
